--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: typed_data
 version: 1.0.1-dev
 author: Dart Team <misc@dartlang.org>
 description: Utility functions and classes related to the 'dart:typed_data' library.
-homepage: http://www.dartlang.org
+homepage: https://github.com/dart-lang/typed_data
 dev_dependencies:
   unittest: ">=0.9.0 <0.10.0"
 environment:
