--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,6 @@ author: Dart Team <misc@dartlang.org>
 description: Utility functions and classes related to the 'dart:typed_data' library.
 homepage: https://github.com/dart-lang/typed_data
 dev_dependencies:
-  unittest: ">=0.9.0 <0.10.0"
+  test: "^0.12.0"
 environment:
-  sdk: ">=1.5.0 <2.0.0"
+  sdk: ">=1.8.0 <2.0.0"
