chore: set max SDK version to <3.0.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ dart:
   - dev
 
 dart_task:
-  - test: -p vm,firefox
+  - test: -p vm
+    xvfb: false
+  - test: -p firefox
   - dartfmt
   - dartanalyzer
 
