--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,13 @@
 name: typed_data
-version: 1.1.6
+version: 1.1.7
+
 author: Dart Team <misc@dartlang.org>
+
 description: Utility functions and classes related to the 'dart:typed_data' library.
 homepage: https://github.com/dart-lang/typed_data
-dev_dependencies:
-  test: "^0.12.0"
+
 environment:
-  sdk: ">=2.0.0-dev.16.0 <2.0.0"
+  sdk: '>=2.0.0-dev.16.0 <3.0.0'
+
+dev_dependencies:
+  test: ^1.2.0
