test: fix dart2js tests
Fixes https://github.com/dart-lang/typed_data/issues/16

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ dart:
 
 dart_task:
   - test: -p vm
-  # TODO: reinstate once https://github.com/dart-lang/typed_data/issues/16 is fixed
-  # - test: -p firefox
+  - test: -p firefox
   - dartfmt
   - dartanalyzer
 
