--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,11 @@ author: Dart Team <misc@dartlang.org>
 homepage: https://github.com/dart-lang/typed_data
 
 environment:
-  sdk: '>=2.0.0 <3.0.0'
+  sdk: '>=2.3.0 <3.0.0'
 
 dev_dependencies:
   pedantic: ^1.0.0
   test: ^1.0.0
+
+  # Remove when https://github.com/dart-lang/sdk/issues/39702 is fixed
+  analyzer: <0.39.2
