Migrate to NNBD.

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,6 +4,8 @@ analyzer:
   errors:
     annotate_overrides: ignore
     prefer_single_quotes: ignore
+  enable-experiment:
+    - non-nullable
 
 linter:
   rules:
