--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: typed_data
-version: 1.2.0-dev
+version: 2.0.0-dev
 
 description: >-
   Utility functions and classes related to the dart:typed_data library.
 homepage: https://github.com/dart-lang/typed_data
 
 environment:
-  sdk: '>=2.4.0 <3.0.0'
+  sdk: '>=2.8.0-dev.0 <3.0.0'
 
 dependencies:
   collection: ^1.1.0
@@ -14,3 +14,9 @@ dependencies:
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.0.0
+
+#dependency_overrides:
+#  collection:
+#    git:
+#      url: git://github.com/dart-lang/collection.git
+#      ref: null_safety
