--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,43 @@
 language: dart
 dart:
-  - stable
-  - dev
+  - be/raw/latest
 
-dart_task:
-  - test: -p vm
-  - test: -p firefox
-  - dartanalyzer: --fatal-infos --fatal-warnings .
-
-matrix:
+jobs:
   include:
-  # Only validate formatting using the dev release
-  - dart: dev
-    dart_task: dartfmt
+    - stage: analyze_and_format
+      name: "Analyze lib/"
+      dart: be/raw/latest
+      os: linux
+      script: dartanalyzer --fatal-warnings --fatal-infos lib/
+    # Dirs outside of `lib` are not supported by allowed_experiments.json
+    - stage: analyze_and_format
+      name: "Analyze test/"
+      dart: be/raw/latest
+      os: linux
+      script: dartanalyzer --enable-experiment=non-nullable --fatal-warnings --fatal-infos test/
+    - stage: analyze_and_format
+      name: "Format"
+      dart: be/raw/latest
+      os: linux
+      script: dartfmt -n --set-exit-if-changed .
+    - stage: test
+      name: "Vm Tests"
+      dart: be/raw/latest
+      os: linux
+      script: pub run --enable-experiment=non-nullable test -p vm 
+    - stage: test
+      name: "Web Tests"
+      dart: be/raw/latest
+      os: linux
+      script: pub run --enable-experiment=non-nullable test -p chrome
+
+stages:
+  - analyze_and_format
+  - test
 
 # Only building master means that we don't run two builds for each pull request.
 branches:
-  only: [master]
+  only: [master, null_safety]
 
 cache:
  directories:
