--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,25 +1,21 @@
 name: typed_data
-version: 1.3.0-dev
+version: 1.3.0-nnbd
 
 description: >-
   Utility functions and classes related to the dart:typed_data library.
 homepage: https://github.com/dart-lang/typed_data
 
 environment:
-  sdk: '>=2.9.0-1 <3.0.0'
+  sdk: '>=2.9.0-18.0 <2.9.0'
 
 dependencies:
-  collection: ^1.1.0
+  collection: ^1.15.0-nnbd
 
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.0.0
 
-
 dependency_overrides:
-  # test: ^1.12.0
-  # test_api: ^0.2.14
-  # test_core: ^0.3.0
   async:
     git:
       url: git://github.com/dart-lang/async.git
@@ -36,6 +32,11 @@ dependency_overrides:
     git:
       url: git://github.com/dart-lang/collection.git
       ref: null_safety
+  js:
+    git:
+      url: git://github.com/dart-lang/sdk.git
+      ref: null_safety-pkgs
+      path: pkg/js
   matcher:
     git:
       url: git://github.com/dart-lang/matcher.git
@@ -56,6 +57,14 @@ dependency_overrides:
   pool:
     git:
       url: git://github.com/dart-lang/pool.git
+      ref: null_safety
+  source_maps:
+    git:
+      url: git://github.com/dart-lang/source_maps.git
+      ref: null_safety
+  source_map_stack_trace:
+    git:
+      url: git://github.com/dart-lang/source_map_stack_trace.git
       ref: null_safety
   source_span:
     git:
