--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
   sdk: '>=2.9.0-18.0 <2.9.0'
 
 dependencies:
-  collection: ^1.15.0-nnbd
+  collection: '>=1.15.0-nnbd <1.15.0'
 
 dev_dependencies:
   pedantic: ^1.9.0
