--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,10 +6,10 @@ description: >-
 homepage: https://github.com/dart-lang/typed_data
 
 environment:
-  sdk: '>=2.9.0-18.0 <2.10.0'
+  sdk: '>=2.9.0-18.0 <=2.9.10'
 
 dependencies:
-  collection: '>=1.15.0-nnbd <1.15.0'
+  collection: '>=1.15.0-nullsafety <1.15.0'
 
 dev_dependencies:
   pedantic: ^1.9.0
