--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ description: >-
   Utility functions and classes related to the dart:typed_data library.
 homepage: https://github.com/dart-lang/typed_data
 
-environment:
-  sdk: '>=2.9.0-18.0 <=2.9.10'
+  # This must remain a tight constraint until nnbd is stable
+  sdk: '>=2.10.0-0 <2.10.0'
 
 dependencies:
   collection: '>=1.15.0-nullsafety <1.15.0'
@@ -22,16 +22,20 @@ dependency_overrides:
     git: git://github.com/dart-lang/boolean_selector.git
   charcode:
     git: git://github.com/dart-lang/charcode.git
+  collection:
+    git: git://github.com/dart-lang/collection.git
   js:
     git:
       url: git://github.com/dart-lang/sdk.git
       path: pkg/js
+      ref: 2-10-pkgs
   matcher:
     git: git://github.com/dart-lang/matcher.git
   meta:
     git:
       url: git://github.com/dart-lang/sdk.git
       path: pkg/meta
+      ref: 2-10-pkgs
   path:
     git: git://github.com/dart-lang/path.git
   pedantic:
