--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ description: >-
   Utility functions and classes related to the dart:typed_data library.
 homepage: https://github.com/dart-lang/typed_data
 
+environment:
   # This must remain a tight constraint until nnbd is stable
   sdk: '>=2.10.0-0 <2.10.0'
 
