--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: typed_data
-version: 1.3.0-nullsafety.5
+version: 1.3.0
 
 description: >-
   Utility functions and classes related to the dart:typed_data library.
@@ -9,7 +9,7 @@ environment:
   sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
-  collection: '>=1.15.0-nullsafety <1.15.0'
+  collection: ^1.15.0
 
 dev_dependencies:
   pedantic: ^1.10.0-nullsafety
