--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,11 +1,8 @@
-include: package:pedantic/analysis_options.1.9.0.yaml
+include: package:lints/recommended.yaml
 
 analyzer:
   strong-mode:
     implicit-casts: false
-  errors:
-    annotate_overrides: ignore
-    prefer_single_quotes: ignore
 
 linter:
   rules:
