--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,8 @@
 name: typed_data
 version: 1.3.1-dev
-
 description: >-
   Utility functions and classes related to the dart:typed_data library.
-homepage: https://github.com/dart-lang/typed_data
+repository: https://github.com/dart-lang/typed_data
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
