--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,15 @@
 name: typed_data
-version: 1.3.1
+version: 1.3.2-dev
 description: >-
   Utility functions and classes related to the dart:typed_data library.
 repository: https://github.com/dart-lang/typed_data
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   collection: ^1.15.0
 
 dev_dependencies:
-  lints: ^1.0.0
+  dart_flutter_team_lints: ^0.1.0
   test: ^1.16.0
