--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ topics:
   - data-structures
 
 environment:
-  sdk: ''>=2.17.0 <4.0.0'
+  sdk: '>=2.17.0 <4.0.0'
 
 dependencies:
   collection: ^1.15.0
