--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,14 @@
 name: typed_data
-version: 1.3.2-dev
+version: 1.3.2
 description: >-
   Utility functions and classes related to the dart:typed_data library.
 repository: https://github.com/dart-lang/typed_data
 
+topics:
+  - data-structures
+
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: '>=2.17.0 <4.0.0'
 
 dependencies:
   collection: ^1.15.0
