--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: typed_data
-version: 1.3.2
+version: 1.3.3-wip
 description: >-
   Utility functions and classes related to the dart:typed_data library.
 repository: https://github.com/dart-lang/typed_data
@@ -8,11 +8,11 @@ topics:
   - data-structures
 
 environment:
-  sdk: '>=2.17.0 <4.0.0'
+  sdk: ^3.0.0
 
 dependencies:
   collection: ^1.15.0
 
 dev_dependencies:
-  dart_flutter_team_lints: ^0.1.0
+  dart_flutter_team_lints: ^1.0.0
   test: ^1.16.0
