--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -64,4 +64,5 @@ jobs:
         if: always() && steps.install.outcome == 'success'
       - name: Run Chrome tests - wasm
         run: dart test --platform chrome --compiler dart2wasm
+        # TODO: drop `dev` filter when dart2wasm is working on stable
         if: always() && steps.install.outcome == 'success' && matrix.sdk == 'dev'
