--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
   sdk: ^3.0.0
 
 dependencies:
-  collection: ^1.15.0
+  collection: '>=1.15.0 <3.0.0'
 
 dev_dependencies:
   dart_flutter_team_lints: ^2.0.0
